--- a/index.html
+++ b/index.html
@@ -18,7 +18,254 @@
     </head>
     <body>
 
+        <header>
+            <div class="container">
+                <div class="top">
+                    <div class="logo">
+                        <img src="img/logo.png" alt="">
+                    </div>
+                    <div class="contacts">
+                        <p><i class="fa fa-mobile"></i> <i class="fa fa-whatsapp"></i> +7 988 285 79 02 (Россия)</p>
+                        <p><i class="fa fa-mobile"></i> <i class="fa fa-whatsapp"></i> +7 777 948 92 97 (Казахстан)</p>
+                    </div>
+                </div>
+                <div class="main">
+                    <div class="offer">
+                        <h1>Кисть I love beauty - идеально ровный тон для вашего лица за считанные минуты</h1>
+                        <h3>Великолепный подарок. Элегантный и практичный аксессуар.</h3>
+                        <h3>Выбор отечественных и зарубежных профессионалов!</h3>
+                        <p><i class="fa fa-check"></i> Не оставляет разводов на лице</p>
+                        <p><i class="fa fa-check"></i>  Зашлифовывая кожу придает ей фарфоровый вид</p>
+                        <p><i class="fa fa-check"></i> Сглаживает все неровности</p>
+                        <p><i class="fa fa-check"></i> Экономит время и косметические средства</p>
+                        <p><i class="fa fa-check"></i> Легко очищается и дезинфицируется</p>
+                        <p><i class="fa fa-check"></i> Помещается даже в самую маленькую косметичку</p>
+                    </div>
+                    <div class="deal">
+                        <div class="box">
+                            <p class="title">
+                                СКИДКА!
+                            </p>
+                            <p>Старая цена <span>1900 руб.</span> Цена со скидкой 1200 руб.</p>
+                            <form action="send.php">
+                                <input type="phone" name="phone" placeholder="Ваш номер телефона">
+                                <button class="btn" type="submit">Купить со скидкой</button>
+                            </form>
+                            <p>Заполните форму и мы перезвоним Вам для уточнения деталей покупки</p>
+                        </div>
+                        <p class="strong">Внимание! Количество по акции ограничено. Осталось <span class="quantity">17</span> шт.</p>
+                    </div>
+                </div>
+            </div>
+        </header>
 
+        <section id="description">
+            <div class="container">
+                <div class="image">
+                    <img src="img/description-bg.img" alt="">
+                </div>
+                <div class="text">
+                    <h2>Безупречное преображение с помощью кисти I love beauty</h2>
+                    <p>Инновационная полирующая кисть I love beauty является идеальным выбором для нанесения тона, финишной и сияющей пудр, хайлайтера, бронзанта и любых других жидких, жирных и рассыпчатых текстур. </p>
+                    <p>Кисть позволяет легко и равномерно наносить, идеально растушевывать косметические средства и получить тончайшее ультра ровное покрытие, типа "вторая кожа". </p>
+                    <p>По сути это инструмент для нанесения косметики, ее растушевки, выравнивания и полировки на коже. Нанесение тональных, маскирующих средств и пудры с помощью кисти I love beauty, позволяет эффективно замаскировать несовершенства, безупречно выровнять цвет и текстуру кожи, а также абсолютно скрыть расширенные поры. </p>
+                    <p>Теперь Ваша кожа безупречна, Вам осталось лишь завершить ваше преображение посредством создания выбранного модного образа. </p>
+                </div>
+            </div>
+        </section>
+
+        <section id="features">
+            <div class="container">
+                <h2>5 причин влюбиться в кисть <span>I love beauty</span></h2>
+                <div class="row">
+                    <div class="col-left">
+                        <img src="img/features-1.jpg" alt="">
+                    </div>
+                    <div class="col-right">
+                        <p class="title">
+                            Фирменное качество
+                        </p>
+                        <p>При производстве кисти I love beauty используются только современные экологичные гипоалергенные материалы. Ручка из высококачественного мягкого, прочного нейлона. Щетинки из гибкого, мягкого синтетического ворса. </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-left">
+                        <p class="title">Эргономичный дизайн</p>
+                        <p>Конусообразная форма позволяет легко прорабатывать труднодоступные деликатные участки – вокруг уголков глаз, крыльев носа. Текстурированная ручка кисти при использовании не скользит в руке. При сгибании не ломается и не деформируется. </p>
+                        <p class="title">Универсальность</p>
+                        <p>Может использоваться как в домашних условиях, так и в профессиональной деятельности. Подходит для любого типа кожи, в том числе и для чувствительной. </p>
+                    </div>
+                    <div class="col-right">
+                        <img src="img/features-2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-left">
+                        <img src="img/features-3.jpg" alt="">
+                    </div>
+                    <div class="col-right">
+                        <p class="title">Экономичность</p>
+                        <p>Очень плотный и при этом очень мягкий синтетический ворс не дает косметике проникать глубоко внутрь кисти, а значит, позволяет расходовать средства экономично. </p>
+                        <p>Слой покрытия получается значительно тоньше, чем при работе со спонжем или обычной кистью. </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-left">
+                        <p class="title">
+                            Практичность
+                        </p>
+                        <p>После использования кисть легко моется обычным шампунем. </p>
+                        <p>Благодаря своим компактным размерам легко помещается даже в самую маленькую косметичку.</p>
+                    </div>
+                    <div class="col-right">
+                        <img src="img/features-4.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="action-before">
+            <div class="container">
+                <div class="image">
+                    <img src="img/action-before.jpg" alt="">
+                </div>
+                <div class="text">
+                    <p>Всегда держите под рукой Волшебную кисть I love beauty, поскольку именно с ней вы сможете довести до идеала растушевку теней в подбровном пространстве, добавить сияния на виски, зрительно выделить и добавить сексуального изгиба губам, завершить контурирование овала и добавить аристократизма скульптуре вашего лица.</p>
+                    <p> Этот изысканный аксессуар сэкономит Ваше время и косметические средства. Кисть легко очищается и дезинфицируется. Она эргономична и имеет гипоаллергенный ворс. </p>
+                    <p>Очень важен и тот момент, что используя Волшебную кисть I love beauty для нанесения косметики, вы ежедневно проводите очень полезный для вашей кожи микромассаж, который улучшает кровообращение и лимфодренаж, снижает отечность и улучшает цвет лица, поэтому ваша кожа и вечером выглядит свежей и отдохнувшей.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="action">
+            <div class="container">
+                <div class="text">
+                    <p><em>Закажи кисть со скидкой прямо сейчас!</em></p>
+                    <p>Цена со скидкой <em>1200 руб.</em></p>
+                    <form action="send.php">
+                        <input type="text" name="name" placeholder="Ваше имя">
+                        <input type="phone" name="phone" placeholder="Ваш номер телефона">
+                        <button class="btn" type="submit">Купить со скидкой</button>
+                    </form>
+                    <p class="desc">Стоимость доставки по России от 350 руб.</p>
+                    <p><em>Осталось по акционной цене - <span class="quantity">17</span> шт</em></p>
+                </div>
+                <div class="image">
+                    <img src="img/action-img.jpg" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section id="reasons">
+            <div class="container">
+                <h2>3 причины купить кисть <span>I love beauty</span> здесь и сейчас:</h2>
+                <div class="icon">
+                    <img src="img/icon-1.png" alt="">
+                    <p>100 % оригинал, произведено под контролем бренда "I love beauty".</p>
+                </div>
+                <div class="icon">
+                    <img src="img/icon-2.png" alt="">
+                    <p>Гарантия возврата денег если кисть не понравилась.</p>
+                </div>
+                <div class="icon">
+                    <img src="img/icon-3.png" alt="">
+                    <p>Доставка по всей России и СНГ за 1-10 дней. <br>Оплата при получении.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="feedback">
+            <div class="container">
+                <h2>Отзывы</h2>
+                <div class="col">
+                    <img src="img/fb-1.jpg" alt="">
+                    <p class="quote">Потрясающая кисть. Удивила меня своей мягкостью и ощущением, что тон наносится мягким спонжем. Очень удобная для контуринга и растушёвки. А самое главное, клиентам очень нравятся ощущение, когда я использую кисточку.</p>
+                    <p class="author">Анастасия Гомбеева. Г. Сочи. Визажист, бьюти блоггер. <a href="https://www.instagram.com/anastasiagombeeva/"><i class="fa fa-instagram"></i>/anastasiagombeeva/</a></p>
+                </div>
+                <div class="col">
+                    <img src="img/fb-2.jpg" alt="">
+                    <p class="quote">Эта кисть, по-настоящему, волшебная. 🎨 Плотная набивка качественного ворса, создает удивительно нежную поверхность.  И нанесение тонального средства или  любого уходового крема превращается в реальную спа-процедуру 😍 Она создает идеально ровное покрытие. Это кисть-релакс)) распределение средства по массажным линиям создает эффект лифтинга и улучшает ток лимфы. Массаж каждый день и сплошное удовольствие)) 😇</p>
+                    <p class="author">Наталья Калита. Г. Ростов на Дону. Визажист, преподаватель курсов по макияжу.<a href="https://www.instagram.com/kalita_make_up/"><i class="fa fa-instagram"></i>/kalita_make_up/</a></p>
+                </div>
+                <div class="col">
+                    <img src="img/fb-3.jpg" alt="">
+                    <p class="quote">Очень мягкий,набитый срез. Благодаря этому процесс нанесения тона доставляет удовольствие, а сам тон ложится ровно, без полос. Гибкая удобная ручка, можно прокрасить складки и мелкие морщинки. Кроме того стильно и профессионально смотрится среди прочих кистей в моем арсенале...</p>
+                    <p class="author">Инна Ланина г.Волгоград. Визажист. Организатор МК для визажистов<a href="https://www.instagram.com/innalanina/"><i class="fa fa-instagram"></i>/innalanina/</a></p>
+                </div>
+            </div>
+        </section>
+
+        <section id="steps">
+            <div class="container">
+                <h2>Всего 4 шага и кисть Ваша!</h2>
+                <div class="row">
+                    <div class="number">
+                        <div class="num-1">
+                            <h4>Шаг 1.</h4>
+                        </div>
+                        <p>Вы оставляете заявку на сайте или по телефону
+                        <br><a href="#order"></a>>ОСТАВИТЬ ЗАЯВКУ</a></p>
+                    </div>
+                    <div class="number">
+                        <div class="num-2">
+                            <h4>Шаг 2.</h4>
+                        </div>
+                        <p>Мы связываемся с вами и оформляем покупку</p>
+                    </div>
+                    <div class="number">
+                        <div class="num-3">
+                            <h4>Шаг 3.</h4>
+                        </div>
+                        <p>Вы получаете кисть за 1-10 дней. Оплата при получении</p>
+                    </div>
+                    <div class="number">
+                        <div class="num-4">
+                            <h4>Шаг 4.</h4>
+                        </div>
+                        <p>Вы становитесь хозяйкой супер кисти и Ваш тон отныне безупречен!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="wholesale">
+            <div class="container">
+                <h2>Супер акция!</h2>
+                <img src="img/wholesale-1.jpg" alt="" class="ws-1">
+                <img src="img/wholesale-2.jpg" alt="" class="ws-2">
+                <img src="img/wholesale-3.jpg" alt="" class="ws-3">
+                <p class="text-1">При покупке от 6 до 10 шт. Цена <span>700 руб. за шт.</span></p>
+                <p class="text-2">При покупке от 2 до 5 шт. Цена <span>900 руб за шт.</span></p>
+            </div>
+        </section>
+
+        <section id="faq">
+            <div class="container">
+                <h2>Ответы на часто задаваемые вопросы:</h2>
+                <p><em>Как правильно ухаживать за кистью?  </em></p>
+                <p>Наполните небольшую миску или чашку теплой водой. Смочите щетинки в воде. Выдавите в ладонь каплю шампуня. Мягкими вращательными движениями взбейте пену кистью щетинками вниз.  Ополосните кисть под теплой проточной водой. При необходимости повторите еще раз, пока вода из кисти не станет прозрачной. </p>
+                <p>Сухой тканью или полотенцем аккуратно промокните щетинки. Положите кисть на ночь в горизонтальное положение в сухое место при комнатной температуре. Когда кисть высохнет, мягкими движениями взбейте щетинки рукой. </p>
+                <p><em>Я хочу приобрести несколько кистей по спец. цене, как правильно заказать?</em></p>
+                <p>Точно также как и при заказе 1 шт. Заполните любую форму на сайте либо напишите  в WhatsApp по номеру указанному в верху сайта. Когда наш менеджер свяжется с Вами для уточнения деталей, скажите ему сколько шт. Вам оформить.</p>
+            </div>
+        </section>
+
+        <footer>
+            <div class="container">
+                <div class="col">
+                    <p>г.Москва, 170000, ул.Тверская, д.37</p>
+                    <p>Казахстан,  463007, г.Актобе, улица, дом</p>
+                </div>
+                <div class="col">
+                    <p><a href="https://www.instagram.com/ideal_brush/"><i class="fa fa-instagram"></i></a></p>
+                    <p><a href="#policy">Политика конфидециальности</a></p>
+                </div>
+                <div class="col">
+                    <img src="img/logo-footer.png">
+                    <p>&copy 2017 I Love Beauty</p>
+                </div>
+            </div>
+        </footer>
 
     <!-- jQuery --> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
