--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <p class="title">
                                 СКИДКА!
                             </p>
-                            <p>Старая цена <span>1900 руб.</span> Цена со скидкой 1200 руб.</p>
+                            <p>Старая цена <span>1900 руб.</span> Цена со скидкой <span class="pink">1200 руб.</span></p>
                             <form action="send.php">
                                 <input type="phone" name="phone" placeholder="Ваш номер телефона">
                                 <button class="btn" type="submit">Купить со скидкой</button>
@@ -62,7 +62,7 @@
         <section id="description">
             <div class="container">
                 <div class="image">
-                    <img src="img/description-bg.img" alt="">
+                    <img src="img/description-img.jpg" alt="">
                 </div>
                 <div class="text">
                     <h2>Безупречное преображение с помощью кисти I love beauty</h2>
@@ -140,7 +140,7 @@
         <section id="action">
             <div class="container">
                 <div class="text">
-                    <p><em>Закажи кисть со скидкой прямо сейчас!</em></p>
+                    <p class="title"><em>Закажи кисть со скидкой прямо сейчас!</em></p>
                     <p>Цена со скидкой <em>1200 руб.</em></p>
                     <form action="send.php">
                         <input type="text" name="name" placeholder="Ваше имя">
@@ -149,9 +149,6 @@
                     </form>
                     <p class="desc">Стоимость доставки по России от 350 руб.</p>
                     <p><em>Осталось по акционной цене - <span class="quantity">17</span> шт</em></p>
-                </div>
-                <div class="image">
-                    <img src="img/action-img.jpg" alt="">
                 </div>
             </div>
         </section>
@@ -179,18 +176,18 @@
                 <h2>Отзывы</h2>
                 <div class="col">
                     <img src="img/fb-1.jpg" alt="">
-                    <p class="quote">Потрясающая кисть. Удивила меня своей мягкостью и ощущением, что тон наносится мягким спонжем. Очень удобная для контуринга и растушёвки. А самое главное, клиентам очень нравятся ощущение, когда я использую кисточку.</p>
-                    <p class="author">Анастасия Гомбеева. Г. Сочи. Визажист, бьюти блоггер. <a href="https://www.instagram.com/anastasiagombeeva/"><i class="fa fa-instagram"></i>/anastasiagombeeva/</a></p>
+                    <p class="quote"><i class="fa fa-quote-left"></i> Потрясающая кисть. Удивила меня своей мягкостью и ощущением, что тон наносится мягким спонжем. Очень удобная для контуринга и растушёвки. А самое главное, клиентам очень нравятся ощущение, когда я использую кисточку.</p>
+                    <p class="author">Анастасия Гомбеева. Г. Сочи. Визажист, бьюти блоггер. <br> <a href="https://www.instagram.com/anastasiagombeeva/"><i class="fa fa-instagram"></i>/anastasiagombeeva/</a></p>
                 </div>
                 <div class="col">
                     <img src="img/fb-2.jpg" alt="">
-                    <p class="quote">Эта кисть, по-настоящему, волшебная. 🎨 Плотная набивка качественного ворса, создает удивительно нежную поверхность.  И нанесение тонального средства или  любого уходового крема превращается в реальную спа-процедуру 😍 Она создает идеально ровное покрытие. Это кисть-релакс)) распределение средства по массажным линиям создает эффект лифтинга и улучшает ток лимфы. Массаж каждый день и сплошное удовольствие)) 😇</p>
-                    <p class="author">Наталья Калита. Г. Ростов на Дону. Визажист, преподаватель курсов по макияжу.<a href="https://www.instagram.com/kalita_make_up/"><i class="fa fa-instagram"></i>/kalita_make_up/</a></p>
+                    <p class="quote"><i class="fa fa-quote-left"></i> Эта кисть, по-настоящему, волшебная. 🎨 Плотная набивка качественного ворса, создает удивительно нежную поверхность.  И нанесение тонального средства или  любого уходового крема превращается в реальную спа-процедуру 😍 Она создает идеально ровное покрытие. Это кисть-релакс)) распределение средства по массажным линиям создает эффект лифтинга и улучшает ток лимфы. Массаж каждый день и сплошное удовольствие)) 😇</p>
+                    <p class="author">Наталья Калита. Г. Ростов на Дону. Визажист, преподаватель курсов по макияжу. <br><a href="https://www.instagram.com/kalita_make_up/"><i class="fa fa-instagram"></i>/kalita_make_up/</a></p>
                 </div>
                 <div class="col">
                     <img src="img/fb-3.jpg" alt="">
-                    <p class="quote">Очень мягкий,набитый срез. Благодаря этому процесс нанесения тона доставляет удовольствие, а сам тон ложится ровно, без полос. Гибкая удобная ручка, можно прокрасить складки и мелкие морщинки. Кроме того стильно и профессионально смотрится среди прочих кистей в моем арсенале...</p>
-                    <p class="author">Инна Ланина г.Волгоград. Визажист. Организатор МК для визажистов<a href="https://www.instagram.com/innalanina/"><i class="fa fa-instagram"></i>/innalanina/</a></p>
+                    <p class="quote"><i class="fa fa-quote-left"></i> Очень мягкий,набитый срез. Благодаря этому процесс нанесения тона доставляет удовольствие, а сам тон ложится ровно, без полос. Гибкая удобная ручка, можно прокрасить складки и мелкие морщинки. Кроме того стильно и профессионально смотрится среди прочих кистей в моем арсенале...</p>
+                    <p class="author">Инна Ланина г.Волгоград. Визажист. Организатор МК для визажистов <br><a href="https://www.instagram.com/innalanina/"><i class="fa fa-instagram"></i>/innalanina/</a></p>
                 </div>
             </div>
         </section>
@@ -204,7 +201,7 @@
                             <h4>Шаг 1.</h4>
                         </div>
                         <p>Вы оставляете заявку на сайте или по телефону
-                        <br><a href="#order"></a>>ОСТАВИТЬ ЗАЯВКУ</a></p>
+                        <br><a href="#order">ОСТАВИТЬ ЗАЯВКУ</a></p>
                     </div>
                     <div class="number">
                         <div class="num-2">
@@ -231,22 +228,27 @@
         <section id="wholesale">
             <div class="container">
                 <h2>Супер акция!</h2>
-                <img src="img/wholesale-1.jpg" alt="" class="ws-1">
-                <img src="img/wholesale-2.jpg" alt="" class="ws-2">
-                <img src="img/wholesale-3.jpg" alt="" class="ws-3">
                 <p class="text-1">При покупке от 6 до 10 шт. Цена <span>700 руб. за шт.</span></p>
                 <p class="text-2">При покупке от 2 до 5 шт. Цена <span>900 руб за шт.</span></p>
+                <form action="send.php">
+                    <input type="text" name="name" placeholder="Ваше имя">
+                    <input type="phone" name="phone" placeholder="Ваш номер телефона">
+                    <button class="btn" type="submit">Купить по акции</button>
+                </form>
+                <p class="desc">Стоимость доставки по России от 350 руб.</p>
             </div>
         </section>
 
         <section id="faq">
             <div class="container">
-                <h2>Ответы на часто задаваемые вопросы:</h2>
-                <p><em>Как правильно ухаживать за кистью?  </em></p>
-                <p>Наполните небольшую миску или чашку теплой водой. Смочите щетинки в воде. Выдавите в ладонь каплю шампуня. Мягкими вращательными движениями взбейте пену кистью щетинками вниз.  Ополосните кисть под теплой проточной водой. При необходимости повторите еще раз, пока вода из кисти не станет прозрачной. </p>
-                <p>Сухой тканью или полотенцем аккуратно промокните щетинки. Положите кисть на ночь в горизонтальное положение в сухое место при комнатной температуре. Когда кисть высохнет, мягкими движениями взбейте щетинки рукой. </p>
-                <p><em>Я хочу приобрести несколько кистей по спец. цене, как правильно заказать?</em></p>
-                <p>Точно также как и при заказе 1 шт. Заполните любую форму на сайте либо напишите  в WhatsApp по номеру указанному в верху сайта. Когда наш менеджер свяжется с Вами для уточнения деталей, скажите ему сколько шт. Вам оформить.</p>
+                <div class="faq-text">
+                    <h2>Ответы на часто задаваемые вопросы:</h2>
+                    <p><em>Как правильно ухаживать за кистью?  </em></p>
+                    <p>Наполните небольшую миску или чашку теплой водой. Смочите щетинки в воде. Выдавите в ладонь каплю шампуня. Мягкими вращательными движениями взбейте пену кистью щетинками вниз.  Ополосните кисть под теплой проточной водой. При необходимости повторите еще раз, пока вода из кисти не станет прозрачной. </p>
+                    <p>Сухой тканью или полотенцем аккуратно промокните щетинки. Положите кисть на ночь в горизонтальное положение в сухое место при комнатной температуре. Когда кисть высохнет, мягкими движениями взбейте щетинки рукой. </p>
+                    <p><em>Я хочу приобрести несколько кистей по спец. цене, как правильно заказать?</em></p>
+                    <p>Точно также как и при заказе 1 шт. Заполните любую форму на сайте либо напишите  в WhatsApp по номеру указанному в верху сайта. Когда наш менеджер свяжется с Вами для уточнения деталей, скажите ему сколько шт. Вам оформить.</p>
+                </div>
             </div>
         </section>
 
